# foundations

./: .gitignore  AGENTS.md  ATTRIBUTION.md  LICENSE  LICENSE-CONTENT  NOTICE  README.md  k-graph.toml
.agents/: internalize.md
.changes/: README.md
T-computer-science/L-functions/: F-03-function-network.md
T-computer-science/L-inference/: F-03-conclusions.md
T-knowledge/: props.yaml
T-knowledge/T-computer-science/: props.yaml
T-knowledge/T-math/: props.yaml
T-math/L-exponential-phase/: F-03-hidden-generators.md
data/media/loci/: .gitignore  README.md  pyproject.toml  render.py  render.toml
data/media/loci/T-computer-science/L-composite/: F-01-carbon-binder.py  F-02-type-binder.py  F-03-query-binder.py  F-04-TLF-composite.py
data/media/scripts/: .env.example  .gitignore  Makefile  README.md  loci.toml  pyproject.toml
data/media/scripts/scenes/: lesson_01.py
data/media/scripts/scenes/T-computer-science/L-composite/: F-01-carbon-binder.py  F-02-type-binder.py  F-03-query-binder.py  F-04-TLF-composite.py  _compat.py  _visuals.py
docs/: COHESIAN.md  CONTRIBUTING.md  CORPUS.md  EXPLORATIONS.md  KGRAPH.md  PLAN-tlf-extensions.md  PRINCIPLES.md  README.md
exponential-phase/: 01-branching-depth-resolution.md  02-discrete-phase-rulers.md  exponential-phase-visual-notebook.ipynb
function-graph-lens/: 01-function.md  04-function-natural-wrappers.md  05-carbon-binder.md  06-type-binder.md  07-query-binder.md  08-tlf-composite.md
function-graph-lens/draft/: function-orchestration.md
inference/: 01-theorem.md  02-agents.md
k-graph/: props.yaml
loci/: .gitignore  README.md  loci_theme.py  manim.cfg  render.py
maps/: youtube.toml
semantics/: 01-data-semantics.md  02-json-representation.md
sparse-ticker-state/: sparse_ticker_state_ledger.md
tools/: README.md  kgraph_infra.py  resolve_kgraph.py  validate_corpus.py  validate_kgraph.py
(+112 files in other folders)
