# loci — k-graph render project (managed with uv).
#
# This is NOT a distributable package; it's an environment for the scene
# scripts that turn k-graph leaves into mp4s. `package = false` tells uv to
# only manage dependencies, never build/install this directory itself.
#
# Prereqs the resolver can't install: a LaTeX distribution (for MathTex).
# Manim's encoder rides on PyAV, so no system ffmpeg is required.

[project]
name = "foundations-loci"
version = "0.1.0"
description = "loci/manim scene scripts that render k-graph leaf videos into data/media/videos/."
requires-python = ">=3.12"
dependencies = [
    "loci",                 # private semantic layer over manim (source pinned below)
    "manim==0.20.1",        # authored + validated against this version
    "av>=14",               # PyAV — manim's video backend (bundles ffmpeg libs)
    "numpy>=1.26",
]

[tool.uv]
package = false

# WHERE `loci` is fetched from. pip/uv just `git clone` this private repo over
# SSH (no PyPI / registry needed) — your SSH key must have read access, and the
# tag below must exist on Cohesian/library.
[tool.uv.sources]
loci = { git = "ssh://git@github.com/Cohesian/library.git", subdirectory = "loci", tag = "v0.1.0" }

# For hacking on loci itself, swap the source above for a local editable checkout:
#   loci = { path = "../../../../library/loci", editable = true }
